--- a/src/App.css
+++ b/src/App.css
@@ -8,13 +8,18 @@
   font-family: Arial, sans-serif;
 }
 
-.weather-container {
+.weather-container, .weather-info {
   background-color: rgba(255, 255, 255, 0.8);
   border-radius: 15px;
   padding: 20px 30px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   text-align: center;
-  width: 300px;
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
+  box-sizing: border-box;
+  margin-top: 30px;
+
 }
 
 .App-logo {
@@ -62,6 +67,7 @@ h1 {
   display: flex;
   gap: 10px;
 }
+
 input {
   width: 70%;
   padding: 10px;
@@ -71,7 +77,7 @@ input {
 }
 
 button {
-  padding: 10px 15px;
+  padding: 10px 30px;
   background-color: #007bff;
   color: white;
   border: none;
@@ -96,18 +102,7 @@ button:hover {
   margin-top: 10px;
 }
 
-.weather-info {
-  margin-top: 20px;
-  background-color: rgba(255, 255, 255, 0.9);
-  border-radius: 15px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-  padding: 25px;
-  text-align: center;
-  max-width: 300px;
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-}
+
 
 .weather-info h2 {
   font-size: 1.8em;
